--- a/yudi/resources/css/popup.css
+++ b/yudi/resources/css/popup.css
@@ -9,6 +9,7 @@
   left: 0;
   height: 100vh;
   width: 100vw;
+  display: none;
 }
 
 .popup-box {
@@ -20,5 +21,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 400px;
-  height: 450px;
+  height: 350px;
+}
+
+.popup-logo {
+  padding-top: 70px;
+  text-align: center;
+}
+
+.popup-logo > img {
+  width: 150px;
+}
+
+.popup-message {
+  text-align: center;
+  font-size: 30px;
+  color: #333;
 }
