--- a/yudi/resources/css/main.css
+++ b/yudi/resources/css/main.css
@@ -15,6 +15,11 @@ html, body {
 }
 
 /* HEADER */
+header {
+  padding: 20px;
+  background-color: var(--color-white);
+  box-shadow: 1px 3px 2px rgba(000,000,000,0.02);
+}
 .logo {
   height: 25px;
 }
