--- a/yudi/resources/css/main.css
+++ b/yudi/resources/css/main.css
@@ -1,6 +1,7 @@
 :root {
   --color-background: #fdfbff;
   --color-white: #ffffff;
+  --color-white-1: #fdfdfd;
   --color-violet: #ad63ad;
   --color-yellow: #ffd903;
   --color-grey-1: #444444;
@@ -11,7 +12,7 @@ html, body {
   margin: 0px;
   padding: 0px;
   background-color: var(--color-background);
-  font-family: 'Open Sans', sans-serif;
+  font-family: sans-serif;
 }
 
 /* HEADER */
@@ -32,4 +33,37 @@ section {
 .page-title {
   font-weight: bold;
   font-size: 30px;
+}
+
+/* USERS */
+.yudi-users {
+  margin: 20px 0px 20px 0px;;
+}
+.yudi-users > a > img {
+  border-radius: 100px;
+  border: 3px solid rgba(000,000,000,0.2);
+  height: 40px;
+}
+
+/* TABLE */
+.yudi-table {
+  width: 900px;
+}
+.yudi-table-header {
+  border: 1px solid rgba(000,000,000,0.1);
+  background-color: var(--color-white-1);
+  padding: 5px 0px 5px 0px;
+  font-size: 15px;
+  font-weight: bold;
+}
+.yudi-table-row {
+  padding: 5px 0px 5px 0px;
+  background-color: var(--color-white);
+  border-left: 1px solid rgba(000,000,000,0.1);
+  border-right: 1px solid rgba(000,000,000,0.1);
+  border-bottom: 1px solid rgba(000,000,000,0.1);
+}
+.yudi-table-menu {
+  margin: 5px 10px 2px 0px;
+  float: right;
 }
